--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -1,8 +1,18 @@
 .header{
+    display: flex;
     background-color: #333333;
+    width: 100%;
     color: #fff;
     padding: 10px;
     text-align: center;
+}
+.font700{
+    font-weight:700;
+    font-size: 16px;
+    letter-spacing:1.2px;
+}
+.logo{
+    min-width: 201px
 }
 .logoContainer{
     display: flex;
@@ -18,14 +28,37 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem;
+    padding: 1rem 1.8rem;
 }
+
 .contactcontainer{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem;
+}
+@media only screen and (max-width: 700px) {
+    .contactcontainer{
+        display: none;
+    }
+    .listcontainer{
+        padding: 0.8rem;
+    }
+    .logo{
+        height: auto;
+        min-width: 152px;
+    }
+    .font700{
+        font-weight:300;
+        font-size: 15px;
+        letter-spacing:1px;
+    }
+    
+
 }
 .marginright{
     margin-right: 1rem;
+}
+
+.font300{
+    font-weight: 300;
 }
